# smart-translator-agenticAI

./: .gitattributes  .gitignore  README.md  pyproject.toml
src/document_class_detector/: README.md
src/document_class_detector/configs/: simple_training.yaml
src/document_class_detector/mcp_server/: server.py
src/document_class_detector/models/: alexnet.py  resnet_50.py  simple_cnn.py  vit.py
src/document_class_detector/scripts/: captum_eval.py  captum_vit.py  data_loader.py  hyperparameter_opti.py  test_model.py  test_single.py  train.py
src/document_image_renderer/: document_image_renderer.py
src/document_translator/: document_translator.py
src/font_detector/: client_test.py  font_detector_logic.py  font_detector_server.py  font_detector_server_dummy.py  font_name_identifier.py  model.py
src/font_detector/models/font_name_detector/: config.json  preprocessor_config.json
src/font_detector/models/font_size/: Arial_model.json  Arial_scaler.pkl  Comic Sans MS_model.json  Comic Sans MS_scaler.pkl  Courier New_model.json  Courier New_scaler.pkl  (+4 more)
src/font_detector/scripts/: evaluate_models.py  generate_font_data.py  hyperparameter_optimization.py  train_font_size.py
src/font_detector/tiny_diff/: data_loaders.py  opt.py  preprocessors.py
src/image_provider/: __init__.py  loader.py  preprocessor.py  provider.py  utils.py
src/layout_detector/: __init__.py  layout_detector.py  outline_detector_image.py  outline_detector_ocr.py  paddle_ocr.py  utils.py
src/rag_component_x/: rag.py
src/supervisor/: supervisor.py  tools_server.py  ui_chat_app.py
(+7 files in other folders)
